<resources>
    <string name="app_name">Climão</string>

    <string name="titulo"> Previsão do tempo agora </string>
    <string name="exemplo_hint"> São Paulo </string>
    <string name="botao_enviar"> Enviar </string>
    <string name="divisor"> - - - - - - -</string>
    <string name="descricao">  </string>
    <string name="celsius">  </string>
    <string name="min_max">  </string>
    <string name="cidade">  </string>

    <dimen name="legenda_tamanho"> 16sp </dimen>
    <dimen name="fontSize"> 20sp </dimen>
    <dimen name="martgem">10dp</dimen>
</resources>