<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WeekForeceast">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/_cidade"
        android:layout_below="@+id/app_bar"
        android:paddingTop="15dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/exemplo_hint"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/_enviar"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/botao_enviar"
        android:textAlignment="center"
        android:shadowColor="@android:color/white"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_main"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/_cidade"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/weather_item">
    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>